# vacancy_manager

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
config/: settings.py
data/exports/: vacancies.xlsx
src/: main.py
src/cli/: interface.py
src/core/: __init__.py  abc_api.py  abc_storage.py  api_client.py  data_manager.py  models.py
src/utils/: __init__.py  cache.py  exporters.py  filters.py
tests/: test_api_client.py  test_data_manager.py  test_filters.py  test_models.py
