[tool.poetry]
name = "vacancy-manager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
openpyxl = "^3.1.5"
poetry-core = "^2.1.3"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.5"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.group.lint.dependencies]
mypy = "^1.17.1"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.black]
line-length = 119
exclude = ".git"

[mypy]
python_version = 3.8
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-requests]
ignore_missing_imports = true

[mypy-pandas]
ignore_missing_imports = true

[mypy-openpyxl]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
